--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!--
  * @LastEditors: 赵兴
- * @LastEditTime: 2021-01-26 08:44:38
+ * @LastEditTime: 2021-01-27 10:37:30
 -->
 <!DOCTYPE html>
 <html lang="">
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app">
+  </div>
 </body>
 
 </html>
